--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "sever",
   "version": "1.0.0",
   "main": "server.js",
- "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-},
-
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
-  "author": "",
+  "author": "adhil v",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "connect-mongo": "^6.0.0",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
+    "mongoose": "^9.0.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
